"CC=gcc" line added

--- a/src/xfsutil/Makefile
+++ b/src/xfsutil/Makefile
@@ -2,6 +2,8 @@ TOPLEVEL=../..
 
 include ../Make.inc
 
+CC=gcc
+
 $(OBJECTS)/xfsutil.o: xfsutil.c
 	$(CC) $(XFS_INCLUDES) -I. -o $(OBJECTS)/xfsutil.o -c xfsutil.c
 
