--- a/src/fuse/Makefile
+++ b/src/fuse/Makefile
@@ -9,10 +9,10 @@ LDFLAGS=$(FUSE_LDFLAGS)
 fuse-xfs: $(BINS)/fuse-xfs
 
 $(OBJECTS)/main_fuse.o: main.c $(SRC)/xfsutil/xfsutil.h
-	ln -sf /usr/ports/sysutils/fusefs-libs/work/fuse-2.9.2/include/fuse.h fuse.h;\
-	ln -sf /usr/ports/sysutils/fusefs-libs/work/fuse-2.9.2/include/fuse_common.h fuse_common.h;\
-	ln -sf /usr/ports/sysutils/fusefs-libs/work/fuse-2.9.2/include/fuse_lowlevel.h fuse_lowlevel.h;\
-	ln -sf /usr/ports/sysutils/fusefs-libs/work/fuse-2.9.2/include/fuse_opt.h fuse_opt.h;\
+	ln -sf /usr/local/include/fuse/fuse.h fuse.h;\
+	ln -sf /usr/local/include/fuse/fuse_common.h fuse_common.h;\
+	ln -sf /usr/local/include/fuse/fuse_lowlevel.h fuse_lowlevel.h;\
+	ln -sf /usr/local/include/fuse/fuse_opt.h fuse_opt.h;\
 	$(CC) -w $(CFLAGS) -o $(OBJECTS)/main_fuse.o -c main.c
 
 $(OBJECTS)/fuse_xfs.o: fuse_xfs.c $(SRC)/xfsutil/xfsutil.h
@@ -22,3 +22,4 @@ $(BINS)/fuse-xfs: $(OBJECTS)/main_fuse.o $(OBJECTS)/fuse_xfs.o $(OBJECTS)/xfsuti
 	$(CC) $(LDFLAGS) -o $(BINS)/fuse-xfs $(OBJECTS)/main_fuse.o $(OBJECTS)/fuse_xfs.o $(OBJECTS)/xfsutil.o $(LIBS)/libxfs.a
 
 clean:
+
