cli and fuse subpackages are updated

--- a/src/xfsutil/Makefile
+++ b/src/xfsutil/Makefile
@@ -3,7 +3,7 @@ TOPLEVEL=../..
 include ../Make.inc
 
 $(OBJECTS)/xfsutil.o: xfsutil.c
-	$(CC) $(XFS_INCLUDES) -I. -o $(OBJECTS)/xfsutil.o -c xfsutil.c
+	$(CC) -w $(XFS_INCLUDES) -I. -o $(OBJECTS)/xfsutil.o -c xfsutil.c
 
 clean:
 
